[package]
name = "ringbuffer-spsc"
version = "0.1.9"
authors = ["Luca Cominardi <luca.cominardi@gmail.com>"]
edition = "2021"
description = "A fast single producer-single consumer ring buffer"
repository = "https://github.com/Mallets/ringbuffer-spsc"
license = "EPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
cache-padded = "1.2.0"
