[package]
name = "ringbuffer-spsc"
version = "0.2.0"
authors = ["Luca Cominardi <luca.cominardi@gmail.com>"]
edition = "2021"
description = "A fast thread-safe single producer-single consumer ring buffer"
repository = "https://github.com/Mallets/ringbuffer-spsc"
license = "EPL-2.0 OR Apache-2.0"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.4"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
